--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -371,10 +371,17 @@
 		</div>
 	</div>
 </div>
-
+<div id="foz" data-href="http://www.google.fi">Google</div>
 
 
 <script type="text/javascript">
+
+	/* var userAgent = navigator.userAgent;
+	if(userAgent.indexOf("Instagram") > -1){
+		alert("웹뷰로 접속시 기능에 제한이 있습니다.\n웹브라우저(Safari/Chrome)로 이용해주세요.");
+		//window.location='https://dealing-art.com/main';
+	} */
+	
 	var mainHotest = {};
 	var mainTodayBid = {};
 	var mainInsights = {};
