--- a/src/main/resources/templates/thymeleaf/fo/deal/deal.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/deal.html
@@ -513,7 +513,7 @@
 <script type="text/javascript"> 
 	var more = 1;
 	$(function () {
-		dealSearch('1', 'TP');
+		dealSearch('LT', 'DOWN');
 	});
 	
 	function sorting(obj){ //pc 정렬
