--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -266,7 +266,7 @@ function myWorkList(){
 			}
 			
 			//거래종료
-			if(result[i].dealSttsCd != "TP" && result[i].dealTypCd != null && result[i].dealTypCd != ""){
+			if(result[i].dealSttsCd != "TP" && result[i].dealTypCd != null && result[i].dealTypCd != "" && result[i].dealSttsCd != "FB"){
 				
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div >';
@@ -310,7 +310,7 @@ function myWorkList(){
 			}
 
 			
-			if(result[i].dealTypCd == null || result[i].dealTypCd == ""){
+			if(result[i].dealTypCd == null || result[i].dealTypCd == "" || result[i].dealSttsCd == "FB"){
 			
 				html += '<div class="griditem '+gtText+'" style="border:0px solid #222;">';
 				html += '<div >';
