--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -532,6 +532,10 @@ jQuery(document).ready(function() {
 		$("#dealSttsCdDetail").text("거래 중지 상태입니다.");
 		$("#dealSttsCdDetail").append("<span>거래중지</span>"); 
 	}
+	if(result.dealInfo.dealSttsCd == "FB"){ //유찰이면
+		$("#dealSttsCdDetail").text("유찰되었습니다.");
+		$("#dealSttsCdDetail").append("<span>유찰</span>"); 
+	}
 });
 /*
  * 남은 시간 초 단위로 불러온다 
