거래 내역 영수증 보기 / 헤더 1시간 1분 마다 새로고침 (세션만료) / 경매 유찰된거 판매자에게 문자 전송

--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -905,9 +905,31 @@
 $(function() {
 	if(sMbrSqVal == null || sMbrSqVal == ""){
 		modalAlertShow("로그인 후 이용하실 수 있습니다.", "main");
+	}else{
+		//event();
 	}
 });
 $('.selectpicker').selectpicker();
+function event(){
+	if(new Date() >= new Date('2022/07/14 13:00') &&
+		new Date() <= new Date('2022/09/01 00:00')){
+		$.ajax({
+	        type: "post",
+	        url: "/myRegCoupon",
+	        data:{
+				mbrSq : sMbrSqVal,
+				cuponIdntfctnNum : "82X9-JB4L-FSOS-E66S"
+			},
+	        success: function(data) {
+	        	console.log(data);
+	        	modalAlertShow("딜링아트 그랜드오픈 이벤트<br/>프리니엄배송 운송비 무료 쿠폰이 발급되었습니다.");
+	        },           
+	        error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		});	
+	}
+}
 var result = /*[[${result}]]*/ 'default';
 var deal = new Object();
 result.deal = deal;
