--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -338,7 +338,7 @@
 										</div>
 										
 										<div class="mbtn-box">
-											<!-- <a href="javascript:fnModalAlert();" class="btns-3">카드영수증</a> -->
+											<a href="javascript:void(0);" class="btns-3" onclick="openReceipt()">영수증</a>
 											<a href="javascript:fnModalAlert();" class="btns-3">거래명세서</a>
 											<!-- <a href="javascript:fnModalAlert();" class="btns-3">현금영수증</a> -->
 											<a href="javascript:fnModalAlert();" class="btns-3">거래계약서</a>
@@ -630,6 +630,19 @@ function searchAddr(){
   */
 function btn_paymethod_onclick(obj){
 	result.dealInfo.paymethod = obj.attributes.value.value;
+}
+ 
+/*
+ * 결제 영수증 
+ */
+function openReceipt(){
+	var refNo = result.payMntInfo.refNo;
+	var tranDate = result.payMntInfo.tranDate;
+	if(refNo != null && refNo != "" && tranDate != null && tranDate != ""){
+		window.open("https://cp.mainpay.co.kr/salesReceipt/salesReceipt_popup.do?ref_no="+refNo+"&&tran_date="+tranDate);
+	}else{
+		modalAlertShow("결제 이력이 없습니다.");
+	}
 }
 /*
  * 결제하기
