--- a/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealMod.html
@@ -1327,10 +1327,10 @@ function vaild(){
 		modalAlertShow("작품 보증서가 업로드되지 않았습니다.");
 		return false;
 	}
-	if(result.work.workPrc == null || result.work.workPrc == ""){
+	/* if(result.work.workPrc == null || result.work.workPrc == ""){
 		modalAlertShow("작품 소장가가 입력되지 않았습니다.");
 		return false;
-	}
+	} */
 	/* if(result.work.workLake == null || result.work.workLake == ""){
 		modalAlertShow("호가가 입력되지 않았습니다.");
 		return false;
